<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranscriptionActivity">

<!--    <TextView-->
<!--        android:id="@+id/textView_label_transcription"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="24dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:layout_marginRight="24dp"-->
<!--        android:text="@string/text_label_transcription"-->
<!--        tools:ignore="MissingConstraints" />-->

    <TextView
        android:id="@+id/textView_transcription"
        android:layout_width="260dp"
        android:layout_height="43dp"
        android:layout_marginTop="448dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/text_transcription"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:text="@string/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_transcription"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextWord"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="300dp"
        android:autofillHints="TTT"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/text_word"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>